lab1/Test/L1-A-10-62.output
Error Type B at Line 5
Error Type A at Line 6
Error Type A at Line 14
Error Type A at Line 19
Error Type A at Line 24
Error Type B at Line 25
